cabal-version: 3.4
name:          launcher
version:       0.1.0.0
license:       MIT
author:        Unisay
maintainer:    Unisay@users.noreply.github.com
category:      Web
build-type:    Simple

executable launcher
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    TypeApplications
    TypeFamilies
    TypeOperators
    UnicodeSyntax
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -threaded

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  build-depends:
    , async                  ^>=2.2.4
    , base                   ^>=4.18
    , concurrent-supply      ^>=0.1.8
    , http-api-data          ^>=0.5
    , relude                 ^>=1.2
    , shroomz
    , string-interpolate     ^>=0.3.2.1
    , time                   ^>=1.12
    , typed-process          ^>=0.2.8
    , wai                    ^>=3.2.3
    , wai-extra              ^>=3.1.13
    , wai-middleware-static  ^>=0.9.2
    , warp                   ^>=3.3.28
    , with-utf8              ^>=1.0.2.4

  other-modules:
    Launcher
    Launcher.Processes
    Layout
